@@ -92,3 +92,17 @@ setMethod("band", "CsparseMatrix",
               stopifnot(k1 <= k2, k1 >= -dd[1], k2 <= dd[1])
               .Call(Csparse_band, x, k1, k2)
           })
+
+.as.dgC.Fun <- function(x, na.rm = FALSE, dims = 1) {
+    x <- as(x, "dgCMatrix")
+    callGeneric()
+}
+
+setMethod("colSums", signature(x = "CsparseMatrix"), .as.dgC.Fun,
+	  valueClass = "numeric")
+setMethod("colMeans", signature(x = "CsparseMatrix"), .as.dgC.Fun,
+	  valueClass = "numeric")
+setMethod("rowSums", signature(x = "CsparseMatrix"), .as.dgC.Fun,
+	  valueClass = "numeric")
+setMethod("rowMeans", signature(x = "CsparseMatrix"), .as.dgC.Fun,
+	  valueClass = "numeric")
